--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "1234",
+    "username": "yohan",
+    "password": "12345678",
     "database": "MOODY_MUSIC",
     "host": "127.0.0.1",
     "dialect": "postgres"
